# VMK

./: .gitmodules  README.md  create_fcitx5_service.sh  fcitx5_uinput_server  fcitx5_uinput_server.cpp  main6.cpp  readme.txt  sconfig
src-full/: CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  create_fcitx5_service.sh  ecm_uninstall.cmake  fcitx5_uinput_server.cpp  install_manifest.txt  main6.cpp  org.fcitx.Fcitx5.Addon.VMK.metainfo.xml  org.fcitx.Fcitx5.Addon.VMK.metainfo.xml.in
src-full/bamboo/: Makefile  bamboo-core.h  cmake_install.cmake
src-full/data/: CMakeLists.txt  Makefile  cmake_install.cmake  vietnamese.cm.dict.url
src-full/po/: Makefile  cmake_install.cmake
src-full/src/: CMakeLists.txt  vmk-addon.conf.in.in  vmk.conf  vmk.conf.in  vmk.cpp  vmk.h  vmkonfig.h
